<resources>
    <string name="app_name">Students</string>
    <string name="dog_photo_description">Dog Photo</string>
    <string name="add_student_description">Add Student</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="phone">Phone</string>
    <string name="checked">Checked</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>